--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://gitee.com/gzhenli/youth-history-app/raw/master/YoungVolunteers.ipa</string>
+					<string>https://github.com/GZhenLi/shaonianzhiApp/raw/master/YoungVolunteers.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://gitee.com/gzhenli/youth-history-app/raw/master/57x57.png</string>
+					<string>https://github.com/GZhenLi/shaonianzhiApp/raw/master/57x57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://gitee.com/gzhenli/youth-history-app/raw/master/512x512.png</string>
+					<string>https://github.com/GZhenLi/shaonianzhiApp/raw/master/512x512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
